Bug 327137 - Accept button not enabled when selecting contacts
Summary: Accept button not enabled when selecting contacts
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: send-file (other bugs)
Version First Reported In: 0.7.0
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-04 16:28 UTC by David Edmundson
Modified: 2013-11-04 16:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-11-04 16:28:40 UTC
Accept button not enabled when selecting contacts
Comment 1 David Edmundson 2013-11-04 16:29:42 UTC
Git commit d2aac601bb6b1f65e3ddf5fbd370a388eb3817dc by David Edmundson, on behalf of Diane Trout.
Committed on 04/11/2013 at 16:28.
Pushed by davidedmundson into branch 'kde-telepathy-0.7'.

Fix a a signal/slot signature mistmatch Tp::ContactPtr to KTp::ContactPtr

Signature updates for change from Tp::ContactPtr to KTp::ContactPtr

The signal signature for ContactGridWidget::selectionChanged changed in ktp-common-internals and so the connection to the OK button in the UI never got the message to enable itself.
FIXED-IN: 0.7.1
REVIEW: 113605

M  +3    -3    mainwindow.cpp
M  +2    -1    mainwindow.h

http://commits.kde.org/telepathy-send-file/d2aac601bb6b1f65e3ddf5fbd370a388eb3817dc