Fix a a signal/slot signature mistmatch Tp::ContactPtr to KTp::ContactPtr

Signature updates for change from Tp::ContactPtr to KTp::ContactPtr

The signal signature for ContactGridWidget::selectionChanged changed in ktp-common-internals and so the connection to the OK button in the UI never got the message to enable itself.

BUG: 327137
FIXED-IN: 0.7.1
REVIEW: 113605